# plf-es-2024-1-ti3-8981100-coinsage

./: .gitignore  CITATION.cff  README.md  vercel.json
Codigo/backend/: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  entrypoint.sh  init.sql  pyproject.toml  requirements.txt
Codigo/backend/.devcontainer/: devcontainer.json
Codigo/backend/docs/: dev_container.md  developer_guide.md  jwt_env.md  python_env.md  recommended_ext.md  running_local_db.md  running_migrations.md
Codigo/backend/src/: main.py
Codigo/backend/src/api/: endpoints.py
Codigo/backend/src/api/controllers/: analysis.py  auth.py  currencies.py  edwin_method.py  user.py  wallet.py  workbook.py
Codigo/backend/src/api/dependencies/: session.py
Codigo/backend/src/api/routes/: currencies.py  edwin_method.py  user.py
Codigo/backend/src/config/settings/: base.py
Codigo/backend/src/models/: __init__.py
Codigo/backend/src/models/db/: __init.__.py  analysis.py  (+14 more)
Codigo/backend/src/repository/: database.py  events.py
Codigo/backend/src/schedules/: schedules.py  update_analysis_info.py  update_currencies_info.py  update_sectors.py
Codigo/backend/src/security/: authentication.py
Codigo/backend/src/services/: __init__.py  analysis_collector.py  authentication.py  currencies_info_collector.py  currencies_info_schedule_service.py  currencies_logo_collector.py  price_timestamp_service.py  sectors_info_collector.py  users_services.py  wallet_service.py
Codigo/backend/src/utilities/: runtime.py
Codigo/backend/tests/: conftest.py
Codigo/backend/tests/db/: db_fixture.py
(+137 files in other folders)
